--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>первая работа
     </title>
     <meta name="description" content="Описание страницы">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 </body>
